--- a/circle.yml
+++ b/circle.yml
@@ -17,3 +17,10 @@ test:
     - 'curl --retry 10 --retry-delay 5 -v --silent http://localhost:3000 --stderr - | grep "Apache: Apache/2.4.7 (Ubuntu)"'
     - 'curl --retry 10 --retry-delay 5 -v --silent http://localhost:3000 --stderr - | grep "PHP Version: 5.6.24-1+deb.sury.org~trusty+1"'
     - 'curl --retry 10 --retry-delay 5 -v --silent http://localhost:3000 --stderr - | grep "MySQL Version: 5.5.50-0ubuntu0.14.04.1"'
+
+deployment:
+  hub:
+    branch: master
+    commands:
+      - docker login -e $DOCKER_EMAIL -u $DOCKER_USER -p $DOCKER_PASS
+      - docker push mattrayner/lamp
