--- a/circle.yml
+++ b/circle.yml
@@ -3,20 +3,17 @@ machine:
     - docker
 
 dependencies:
-  cache_directories:
-      - "~/docker-lamp"
   override:
     - docker info
-    - if [[ -e ~/docker-lamp/image.tar ]]; then docker load --input ~/docker-lamp/image.tar; fi
-    - docker build -t mattrayner/lamp .
-    - mkdir -p ~/docker-lamp; docker save --output ~/docker-lamp/image.tar mattrayner/lamp
+    - docker build --no-cache -t=mattrayner/lamp .
 
 test:
   override:
     - docker run -d -p 3000:80 mattrayner/lamp; sleep 10
-    - 'curl --retry 10 --retry-delay 5 -v --silent http://localhost:3000 --stderr - | grep "Apache: Apache/2.4.7 (Ubuntu)"'
-    - 'curl --retry 10 --retry-delay 5 -v --silent http://localhost:3000 --stderr - | grep "PHP Version: 5.6.24-1+deb.sury.org~trusty+1"'
-    - 'curl --retry 10 --retry-delay 5 -v --silent http://localhost:3000 --stderr - | grep "MySQL Version: 5.5.50-0ubuntu0.14.04.1"'
+    - 'curl --retry 10 --retry-delay 5 -v --silent http://localhost:3000 --stderr - | grep "OS: Linux<br/>"'
+    - 'curl --retry 10 --retry-delay 5 -v --silent http://localhost:3000 --stderr - | grep "Apache: Apache/2.4.7 (Ubuntu)<br/>"'
+    - 'curl --retry 10 --retry-delay 5 -v --silent http://localhost:3000 --stderr - | grep "MySQL Version: 5.5.49-0ubuntu0.14.04.1<br/>"'
+    - 'curl --retry 10 --retry-delay 5 -v --silent http://localhost:3000 --stderr - | grep "PHP Version: 5.5.9-1ubuntu4.19<span>&nbsp;</span>"'
 
 deployment:
   hub:
