Added the ability to build/test/deploy a 14.04 and 16.04 image

--- a/Dockerfile1404
+++ b/Dockerfile1404
@@ -1,11 +1,11 @@
-FROM phusion/baseimage
+FROM phusion/baseimage:0.9.18
 MAINTAINER Matthew Rayner <matt@mattrayner.co.uk>
 ENV REFRESHED_AT 2016-08-21
 
 # based on dgraziotin/lamp
 # MAINTAINER Daniel Graziotin <daniel@ineed.coffee>
 
-ENV DOCKER_USER_ID 501 
+ENV DOCKER_USER_ID 501
 ENV DOCKER_USER_GID 20
 
 ENV BOOT2DOCKER_ID 1000
