--- a/circle.yml
+++ b/circle.yml
@@ -5,12 +5,25 @@ machine:
 dependencies:
   override:
     - docker info
-    - docker build --no-cache -t=mattrayner/lamp .
+    - docker build --no-cache -t=mattrayner/lamp:latest-1604 -t=mattrayner/lamp:dev-1604 -t=mattrayner/lamp:latest  -t=mattrayner/lamp:dev -f Dockerfile .
+    - docker build --no-cache -t=mattrayner/lamp:latest-1404 -t=mattrayner/lamp:dev-1404 -f Dockerfile1404 .
 
 test:
   override:
-    - docker run -d -p 3000:80 mattrayner/lamp; sleep 10
-    - 'curl --retry 10 --retry-delay 5 -v --silent http://localhost:3000 --stderr - | grep "OS: Linux<br/>"'
-    - 'curl --retry 10 --retry-delay 5 -v --silent http://localhost:3000 --stderr - | grep "Apache: Apache/2.4.18 (Ubuntu)<br/>"'
-    - 'curl --retry 10 --retry-delay 5 -v --silent http://localhost:3000 --stderr - | grep "MySQL Version: 5.7.13-0ubuntu0.16.04.2<br/>"'
-    - 'curl --retry 10 --retry-delay 5 -v --silent http://localhost:3000 --stderr - | grep "PHP Version: 5.6.24-1+deb.sury.org~xenial+1<span>&nbsp;</span>"'
+    - pushd  tests && . test.sh && popd
+
+deployment:
+  latest:
+    branch: master
+    commands:
+      - docker login -e $DOCKER_EMAIL -u $DOCKER_USER -p $DOCKER_PASS
+      - docker push mattrayner/lamp:latest-1604
+      - docker push mattrayner/lamp:latest-1404
+      - docker push mattrayner/lamp:latest
+  dev:
+    branch: develop
+    commands:
+      - docker login -e $DOCKER_EMAIL -u $DOCKER_USER -p $DOCKER_PASS
+      - docker push mattrayner/lamp:dev-1604
+      - docker push mattrayner/lamp:dev-1404
+      - docker push mattrayner/lamp:dev
