--- a/circle.yml
+++ b/circle.yml
@@ -5,29 +5,31 @@ machine:
 dependencies:
   override:
     - docker info
-    - docker build --no-cache -t=mattrayner/lamp:latest-1604 -f Dockerfile .
-    - docker tag mattrayner/lamp:latest-1604 mattrayner/lamp:dev-1604
-    - docker tag mattrayner/lamp:latest-1604 mattrayner/lamp:latest
-    - docker tag mattrayner/lamp:latest-1604 mattrayner/lamp:dev
-    - docker build --no-cache -t=mattrayner/lamp:latest-1404 -f Dockerfile1404 .
-    - docker tag mattrayner/lamp:latest-1404 mattrayner/lamp:dev-1404
+    - docker-compose -f docker-compose.test.yml -p ci build
+    - docker-compose -f docker-compose.test.yml -p ci up -d
 
 test:
   override:
-    - pushd  tests && . test.sh && popd
+    - 'docker logs -f ci_sut_1; echo "Exited with status code: $(docker wait ci_sut_1)"; exit $(docker wait ci_sut_1)'
 
 deployment:
   latest:
     branch: master
     commands:
       - docker login -e $DOCKER_EMAIL -u $DOCKER_USER -p $DOCKER_PASS
+      - docker tag ci_web1604:latest mattrayner/lamp:latest
+      - docker tag ci_web1604:latest mattrayner/lamp:latest-1604
+      - docker tag ci_web1404:latest mattrayner/lamp:latest-1404
+      - docker push mattrayner/lamp:latest
       - docker push mattrayner/lamp:latest-1604
       - docker push mattrayner/lamp:latest-1404
-      - docker push mattrayner/lamp:latest
   dev:
     branch: develop
     commands:
       - docker login -e $DOCKER_EMAIL -u $DOCKER_USER -p $DOCKER_PASS
+      - docker tag ci_web1604:latest mattrayner/lamp:dev
+      - docker tag ci_web1604:latest mattrayner/lamp:dev-1604
+      - docker tag ci_web1404:latest mattrayner/lamp:dev-1404
       - docker push mattrayner/lamp:dev-1604
       - docker push mattrayner/lamp:dev-1404
       - docker push mattrayner/lamp:dev
