Mattrayner/add php 7 varients (#37)
* Restructure folders and add PHP7 image variations

* Update README and tests

--- a/1404/Dockerfile-php5
+++ b/1404/Dockerfile-php5
@@ -1,11 +1,11 @@
-FROM phusion/baseimage
-MAINTAINER Matthew Rayner <matt@mattrayner.co.uk>
-ENV REFRESHED_AT 2016-08-21
+FROM phusion/baseimage:0.9.18
+MAINTAINER Matthew Rayner <hello@rayner.io>
+ENV REFRESHED_AT 2018-08-21
 
 # based on dgraziotin/lamp
 # MAINTAINER Daniel Graziotin <daniel@ineed.coffee>
 
-ENV DOCKER_USER_ID 501 
+ENV DOCKER_USER_ID 501
 ENV DOCKER_USER_GID 20
 
 ENV BOOT2DOCKER_ID 1000
@@ -26,7 +26,7 @@ RUN add-apt-repository -y ppa:ondrej/php && \
   apt-key adv --keyserver keyserver.ubuntu.com --recv-keys 4F4EA0AAE5267A6C && \
   apt-get update && \
   apt-get -y upgrade && \
-  apt-get -y install supervisor wget git apache2 php-xdebug libapache2-mod-php5.6 mysql-server php5.6 php5.6-mysql pwgen php5.6-apc php5.6-mcrypt php5.6-gd php5.6-xml php5.6-mbstring php5.6-gettext zip unzip php5.6-zip curl php5.6-curl && \
+ apt-get -y install supervisor wget git apache2 php-xdebug libapache2-mod-php5.6 mysql-server php5.6 php5.6-mysql pwgen php5.6-apc php5.6-mcrypt php5.6-gd php5.6-xml php5.6-mbstring php5.6-gettext zip unzip php5.6-zip curl php5.6-curl && \
   apt-get -y autoremove && \
   echo "ServerName localhost" >> /etc/apache2/apache2.conf
 
