Reformat tests into a single command

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -7,7 +7,9 @@ jobs:
       - run: |
           docker-compose -f docker-compose.test.yml -p ci build
           docker-compose -f docker-compose.test.yml -p ci up -d
-      - run: cd tests && ./test.sh
+          cd tests && ./test.sh
+          echo "--------------------"
+          'docker logs -f ci_sut_1; echo "Exited with status code: $(docker wait ci_sut_1)"; exit $(docker wait ci_sut_1)'
 #      - run: 'docker logs -f ci_sut_1; echo "Exited with status code: $(docker wait ci_sut_1)"; exit $(docker wait ci_sut_1)'
 
   deploy_dev:
