Stop tag release being run on branches

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -58,5 +58,7 @@ workflows:
               only: master
       - deploy-tags:
           filters:
+            branches:
+              ignore: /.*/
             tags:
               only: /.*/
