--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -21,11 +21,21 @@ jobs:
           docker tag ci_web1804-php7:latest mattrayner/lamp:latest-1804-php7
           docker tag ci_web1604-php7:latest mattrayner/lamp:latest-1604
           docker tag ci_web1604-php7:latest mattrayner/lamp:latest-1604-php7
+          docker tag ci_web1804-php7:latest mattrayner/lamp:build-$CIRCLE_BUILD_NUM
+          docker tag ci_web1804-php7:latest mattrayner/lamp:build-$CIRCLE_BUILD_NUM-1804
+          docker tag ci_web1804-php7:latest mattrayner/lamp:build-$CIRCLE_BUILD_NUM-1804-php7
+          docker tag ci_web1604-php7:latest mattrayner/lamp:build-$CIRCLE_BUILD_NUM-1604
+          docker tag ci_web1604-php7:latest mattrayner/lamp:build-$CIRCLE_BUILD_NUM-1604-php7
           docker push mattrayner/lamp:latest
           docker push mattrayner/lamp:latest-1804
           docker push mattrayner/lamp:latest-1804-php7
           docker push mattrayner/lamp:latest-1604
           docker push mattrayner/lamp:latest-1604-php7
+          docker push mattrayner/lamp:build-$CIRCLE_BUILD_NUM
+          docker push mattrayner/lamp:build-$CIRCLE_BUILD_NUM-1804
+          docker push mattrayner/lamp:build-$CIRCLE_BUILD_NUM-1804-php7
+          docker push mattrayner/lamp:build-$CIRCLE_BUILD_NUM-1604
+          docker push mattrayner/lamp:build-$CIRCLE_BUILD_NUM-1604-php7
 
   deploy-tags:
     machine: true
