[#64] Add a MySQL test to ensure there are no mysql connection regressions

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -4,7 +4,10 @@ jobs:
     machine: true
     steps:
       - checkout
-      - run: make test
+      - run: |
+          sudo apt-get update
+          sudo apt-get install -y mysql-client-5.5
+          make test
 
   deploy:
     machine: true
