Locking to php 7.3.x , Cleaning up a bunch of stuff. Added scripts. Update README.
- Broke many of the commands to their orn RUN for caching.
- Added scripts for building, running, and clearing tested containers/images as ./docker-*.sh files.
- Updated the README.md
- I ran the test scripts: ./docker-run-test-1*04.sh and everything works.
  - However, when I run the ci_sut image, it fails by saying it can't connect to port 3000/3001 respectivly.
  - Not sure why the port mapping isn't working.

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -7,7 +7,7 @@ jobs:
       - run: |
           docker-compose -f docker-compose.test.yml -p ci build
           docker-compose -f docker-compose.test.yml -p ci up -d
-          cd tests && ./test.sh
+          cd tests && ./test.sh && cd ../
 
   deploy:
     machine: true
