Remove MySQL volume that can be misleading

--- a/1604/Dockerfile
+++ b/1604/Dockerfile
@@ -73,7 +73,7 @@ ENV PHP_UPLOAD_MAX_FILESIZE 10M
 ENV PHP_POST_MAX_SIZE 10M
 
 # Add volumes for the app and MySql
-VOLUME  ["/etc/mysql", "/var/lib/mysql", "/app" ]
+VOLUME  ["/var/lib/mysql", "/app" ]
 
 EXPOSE 80 3306
 CMD ["/run.sh"]
