--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -16,18 +16,22 @@ jobs:
       - run: |
           docker login -u $DOCKER_USER -p $DOCKER_PASS
           docker-compose -f docker-compose.test.yml -p ci build
-          docker tag ci_web1804-php7:latest mattrayner/lamp:latest
-          docker tag ci_web1804-php7:latest mattrayner/lamp:latest-1804
+          docker tag ci_web1804-php8:latest mattrayner/lamp:latest
+          docker tag ci_web1804-php8:latest mattrayner/lamp:latest-1804
+          docker tag ci_web1804-php8:latest mattrayner/lamp:latest-1804-php8
           docker tag ci_web1804-php7:latest mattrayner/lamp:latest-1804-php7
-          docker tag ci_web1804-php7:latest mattrayner/lamp:build-$CIRCLE_BUILD_NUM
-          docker tag ci_web1804-php7:latest mattrayner/lamp:build-$CIRCLE_BUILD_NUM-1804
+          docker tag ci_web1804-php8:latest mattrayner/lamp:build-$CIRCLE_BUILD_NUM
+          docker tag ci_web1804-php8:latest mattrayner/lamp:build-$CIRCLE_BUILD_NUM-1804
+          docker tag ci_web1804-php8:latest mattrayner/lamp:build-$CIRCLE_BUILD_NUM-1804-php8
           docker tag ci_web1804-php7:latest mattrayner/lamp:build-$CIRCLE_BUILD_NUM-1804-php7
           docker push mattrayner/lamp:latest
           docker push mattrayner/lamp:latest-1804
           docker push mattrayner/lamp:latest-1804-php7
+          docker push mattrayner/lamp:latest-1804-php8
           docker push mattrayner/lamp:build-$CIRCLE_BUILD_NUM
           docker push mattrayner/lamp:build-$CIRCLE_BUILD_NUM-1804
           docker push mattrayner/lamp:build-$CIRCLE_BUILD_NUM-1804-php7
+          docker push mattrayner/lamp:build-$CIRCLE_BUILD_NUM-1804-php8
 
   deploy-tags:
     machine: true
@@ -36,12 +40,14 @@ jobs:
       - run: |
           docker login -u $DOCKER_USER -p $DOCKER_PASS
           docker-compose -f docker-compose.test.yml -p ci build
-          docker tag ci_web1804-php7:latest mattrayner/lamp:$CIRCLE_TAG
-          docker tag ci_web1804-php7:latest mattrayner/lamp:$CIRCLE_TAG-1804
+          docker tag ci_web1804-php8:latest mattrayner/lamp:$CIRCLE_TAG
+          docker tag ci_web1804-php8:latest mattrayner/lamp:$CIRCLE_TAG-1804
+          docker tag ci_web1804-php8:latest mattrayner/lamp:$CIRCLE_TAG-1804-php8
           docker tag ci_web1804-php7:latest mattrayner/lamp:$CIRCLE_TAG-1804-php7
           docker push mattrayner/lamp:$CIRCLE_TAG
           docker push mattrayner/lamp:$CIRCLE_TAG-1804
           docker push mattrayner/lamp:$CIRCLE_TAG-1804-php7
+          docker push mattrayner/lamp:$CIRCLE_TAG-1804-php8
 
 workflows:
   version: 2
