--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -1,7 +1,8 @@
 version: 2
 jobs:
   test:
-    machine: true
+    machine:
+      image: ubuntu-2004:202107-02
     steps:
       - checkout
       - run: |
@@ -10,7 +11,8 @@ jobs:
           make test
 
   deploy:
-    machine: true
+    machine:
+      image: ubuntu-2004:202107-02
     steps:
       - checkout
       - run: |
@@ -48,7 +50,8 @@ jobs:
           docker push mattrayner/lamp:build-$CIRCLE_BUILD_NUM-1804-php8
 
   deploy-tags:
-    machine: true
+    machine:
+      image: ubuntu-2004:202107-02
     steps:
       - checkout
       - run: |
