Add support for amd64

--- a/2004/Dockerfile
+++ b/2004/Dockerfile
@@ -1,10 +1,11 @@
-FROM phusion/baseimage:focal-1.1.0
-MAINTAINER Matthew Rayner <hello@rayner.io>
-ENV REFRESHED_AT 2021-09-07
+ARG BASE_IMAGE=phusion/baseimage:focal-1.1.0
+FROM ${BASE_IMAGE}
+MAINTAINER Mattia Malacarne <mattia.malacarne@n-3.it>
+ENV REFRESHED_AT 2024-07-09
 
-# based on dgraziotin/lamp
-# MAINTAINER Daniel Graziotin <daniel@ineed.coffee>
-# updated for Ubuntu 20.04 LTS/PHP 7.4/PHP 8.0 Ferdinand Kasper <fkasper@modus-operandi.at>
+# based on mattrayner/docker-lamp
+# MAINTAINER Matthew Rayner <hello@rayner.io>
+# updated for Ubuntu support amd64 arch
 
 ENV DOCKER_USER_ID 501 
 ENV DOCKER_USER_GID 20
