--- a/2004/Dockerfile
+++ b/2004/Dockerfile
@@ -19,6 +19,9 @@ ENV SUPERVISOR_VERSION=4.2.2
 ARG PHP_VERSION
 ENV PHP_VERSION=$PHP_VERSION
 
+RUN apt-get update && apt-get upgrade -y
+RUN apt-get install -y software-properties-common
+
 # Tweaks to give Apache/PHP write permissions to the app
 RUN usermod -u ${BOOT2DOCKER_ID} www-data && \
     usermod -G staff www-data && \
@@ -30,7 +33,6 @@ RUN usermod -u ${BOOT2DOCKER_ID} www-data && \
 # Install packages
 ENV DEBIAN_FRONTEND noninteractive
 RUN LC_ALL=C.UTF-8 add-apt-repository -y ppa:ondrej/php && \
-  apt-key adv --keyserver keyserver.ubuntu.com --recv-keys 4F4EA0AAE5267A6C && \
   apt-get update && \
   apt-get -y upgrade && \
   apt-get -y install postfix python3-setuptools wget git apache2 php${PHP_VERSION}-xdebug libapache2-mod-php${PHP_VERSION} mysql-server php${PHP_VERSION}-mysql pwgen php${PHP_VERSION}-apcu php${PHP_VERSION}-gd php${PHP_VERSION}-xml php${PHP_VERSION}-mbstring zip unzip php${PHP_VERSION}-zip curl php${PHP_VERSION}-curl && \
@@ -57,7 +59,7 @@ RUN rm -rf /var/lib/mysql
 
 # Add MySQL utils
 ADD supporting_files/mysql_init.sh /mysql_init.sh
-
+RUN chmod u+x /mysql_init.sh
 # Add phpmyadmin
 RUN wget -O /tmp/phpmyadmin.tar.gz https://files.phpmyadmin.net/phpMyAdmin/${PHPMYADMIN_VERSION}/phpMyAdmin-${PHPMYADMIN_VERSION}-all-languages.tar.gz
 RUN tar xfvz /tmp/phpmyadmin.tar.gz -C /var/www
